k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zero-trust-lab
  labels:
    name: zero-trust-lab
    project: zero-trust-network-sandbox
