k8s/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: zero-trust-lab
spec:
  podSelector: {} # {} significa que aplica a todos los pods del namespace
  policyTypes:
    - Ingress
    - Egress
  # sin reglas implica que todo bloqueado
